<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.compulynx.meetingroombooking.Confirmation"
    tools:showIn="@layout/activity_confirmation"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ProgressBar
        android:id="@+id/confirm_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="114dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:id="@+id/confirm_form"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/resultsView_room"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/textView_capacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Number of\nPeople\n(max):"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_others"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/resultsView_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="23dp"
            app:layout_constraintTop_toBottomOf="@+id/resultsView_time"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView_room" />

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/resultsView_time"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/resultsView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="14dp"
            android:layout_marginTop="27dp"
            app:layout_constraintTop_toBottomOf="@+id/resultsView_date"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView_time" />

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/resultsView_date"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/resultsView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="13dp"
            android:layout_marginTop="25dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView_date" />

        <!--<TextView-->
            <!--android:id="@+id/textView_By"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/by"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Headline"-->
            <!--android:textStyle="bold"-->
            <!--android:layout_marginStart="16dp"-->
            <!--app:layout_constraintBaseline_toBaselineOf="@+id/resultsView_By"-->
            <!--tools:layout_constraintBaseline_creator="1"-->
            <!--tools:layout_constraintLeft_creator="1"-->
            <!--app:layout_constraintLeft_toLeftOf="parent" />-->

        <!--<TextView-->
            <!--android:id="@+id/resultsView_By"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"-->
            <!--tools:layout_constraintTop_creator="1"-->
            <!--android:layout_marginStart="7dp"-->
            <!--android:layout_marginTop="33dp"-->
            <!--tools:layout_constraintLeft_creator="1"-->
            <!--app:layout_constraintTop_toTopOf="parent"-->
            <!--app:layout_constraintLeft_toRightOf="@+id/textView_By" />-->

        <EditText
            android:id="@+id/resultsView_capacity"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:labelFor="@+id/textView_capacity"
            android:ems="10"
            android:inputType="number"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/multi_spinner"
            android:layout_marginTop="50dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView_capacity" />

        <ImageButton
            android:id="@+id/cancel"
            android:layout_width="67dp"
            android:layout_height="0dp"
            android:contentDescription="cancel"
            android:onClick="cancel"
            app:srcCompat="@android:drawable/ic_delete"
            app:layout_constraintRight_toLeftOf="@+id/submit"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="77dp"
            app:layout_constraintBottom_toBottomOf="@+id/submit"
            android:layout_marginEnd="78dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/submit" />

        <ImageButton
            android:id="@+id/submit"
            android:layout_width="67dp"
            android:layout_height="72dp"
            app:srcCompat="@drawable/ic_submit"
            android:onClick="submit"
            android:contentDescription="submit"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="71dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Duration (in mins):"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_room"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="100dp"
            android:layout_height="22dp"
            android:entries="@array/duration_arrays"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            tools:layout_constraintBaseline_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView" />

        <TextView
            android:id="@+id/textView_others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tag colleagues:"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_constraintTop_creator="1"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.compulynx.meetingroombooking.MultiSpinner
            android:id="@+id/multi_spinner"
            android:layout_height="wrap_content"
            android:layout_width="140dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/textView_others"
            tools:layout_editor_absoluteY="216dp"
            android:layout_marginLeft="16dp" />
    </android.support.constraint.ConstraintLayout>





</android.support.constraint.ConstraintLayout>
